--- a/src/components/WelcomeScreen.css
+++ b/src/components/WelcomeScreen.css
@@ -1,5 +1,5 @@
 /* Container */
-.welcome-container {
+.welcome {
   min-height: 100vh;
   display: flex;
   align-items: center;
@@ -26,7 +26,7 @@
   width: 4rem;
   height: 4rem;
   color: #fb7185;
-  /* margin-bottom: 1rem; */
+  margin-top: 1rem;
 }
 
 /* Title */
